# Irie-lang

./: .ghci  .gitignore  ChangeLog.md  LICENSE  Makefile  Mem.md  README.md  TODO  cabal.project  casecase.ii  default.nix  demo.arya  demo.ii  demo.nimzo  flake.nix  future.nimzo  irie.cabal  languageDocumentation.md  m2  package.yaml  parser.nimzo  plop  references  socialmedia  stack.yaml
Irie/oldExamples/: Foldr-Build  sapin.bp  sudoku
Memory/: Memory.nimzo  bins.h  default.nix  fralloc.c  hack.bc  hack.c  proj.c  xd.bc  xd.c  xd.ll
blogs/: codegen.md
compiler/: 0_README.md  BitSetMap.hs  CH.hs  CMMap.hs  CmdLine.hs  Errors.hs  GlobalFlags.hs  LiName.hs  MUnrolls.hs  MyString.hs  Prelude.hs  Prim.hi  Prim.hs  QName.hs  README.md  myPrelude
compiler/1_Main/: CmdLine.hs  LlvmDriver.hs  Main.hs  ModulePaths.hs  Name.hs  Registry.hs  RootModule.hs  Tests.hs
compiler/2_Parse/: DesugarParse.hs  ParseSyntax.hi  ParseSyntax.hs  Parser.hs  Scope.hs  UnPattern.hs
docs/: AdjointFolds.md  AdjointFoldsCH.hs  BetaEnv.hs  BetaEnv.md  BusinessValue.md  Duality.md  FAQ.md  FirstClassPoly.md  Fusion.md  MUnrolls.hs  MuElim.md  README.md  SIMD.md  captures.md  histo  languageDocumentation.md  morphism.md  recursionSchemes.md  references  tutorial.md
examples/: 1  Poker.hs  array  array2  eff  let  map  mixInferCheck.bp  sapin.bp  sudoku  tree.bp  tree.hs  tyFun
experiment/: Match.hs
golden/: goldenList  intmap  list2  mixfixTests  sumMul  tree
goldenOutput/: README.md  bruijn fusion  intmap  invPat  labelDecls  let-capture  list  list1  list2  mixfixTests  phantomLabel  sumMul  tree  tuple
ii/: Abi.ii  AnnotationTests.ii  BitSet.ii  CatDQueue.ii  Ctests.ii  Eff.ii  Eff2.ii  EffNotes.txt  Either.ii  Free.ii  Freer.ii  GigaParsec.ii  Maybe.ii  OptParse.ii  Profunctors.ii  StringFA.ii  Subsumption.ii  Tee.ii  TreeStream.ii  X86Tests.ii  asmTests.ii  base.ii  bigint.ii  dependents.ii  dir.ii  foldr.ii  freeVarTests.ii  fuse.ii  fusion.ii  hash.ii  ifThenElse.ii  intmap.ii  irieShell.ii  labelDecl.ii  lambda.ii  letCaptureTests.ii  letstream.ii  list.ii  list1.ii  list2.ii  (+27 more)
imports/: Either.ii  Free.ii  Impredicative.arya  Impredicative.ii  SpecTests.ii  array.arya  basic.arya  basic.ii  basic.nimzo  cata.ii  church.arya  church.ii  dependents.arya  dependents.nimzo  fin.nimzo  fuse.ii  fusion.ii  gmpMaths.nimzo  intmap.ii  io.nimzo  lambda.arya  lambda.nimzo  list.ii  list.nimzo  list2.ii  ls.ii  mixfix.arya  mixfix.ii  mixfix.nimzo  mixfixTests.ii  mkParser.ii  parsec.ii  parser.ii  parser.nimzo  pi.arya  prelude.ii  prelude.nimzo  printf.arya  question.ii  recTests.ii  (+10 more)
notes/: general  githubSrcCss  modules  names  priorities
presentation/: 0.introduction  1.arrays  1.arrays.md  2.effects  2.tensors.md  AdHocPolymorphism.md  Memory  SRet.md  Stream.md  TypeTheory.md  flexible  motivation  systemLevel
src/: CmdLine.hs  Core.hs  CoreSyn.hs  CoreUtils.hs  Main.hs  ParseSyntax.hs  Parser.hs  ToCore.hs  TypeJudge.hs
trivial/: 0  1  2  CArray.arya  CArray.nimzo  Cextern.nimzo  PutNumber.arya  box  box.nimzo  class  cls  fib.arya  fnArg.arya  id.nimzo  import.arya  intStack  let  pap  pap.arya  partialTypeSig  polyFn  polyLiteral.nimzo  precedence  precedence.nimzo  print  record  record.arya  subclass.arya  sum  sum.arya  tuple  tuple.arya  viewPat.nimzo
(+128 files in other folders)
