cabal-version: 3.6

name:           irie
version:        0.1.0.0
synopsis:       Array oriented calculus of inductive constructions
description:    Please see the README on GitHub at <https://github.com/jfaure/irie#readme>
category:       Compilers
homepage:       https://github.com/jfaure/irie#readme
bug-reports:    https://github.com/jfaure/irie/issues
author:         James Faure
maintainer:     james.faure@epitech.eu
copyright:      2019 James Faure
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jfaure/irie

executable irie-exe
  ghc-options: -threaded -O2 -Wno-deprecations -fdefer-typed-holes -Wno-typed-holes -fdefer-typed-holes -Wno-typed-holes
    -Wunused-imports
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wtabs
    -Wunused-binds
    -Wunused-matches
    -Wunused-do-bind
    -Wwrong-do-bind
    -Wname-shadowing:
  mixins:
      base (Prelude as BasePrelude)
    , base hiding (Prelude)
  main-is: Main.hs
  other-modules:
      Registry
      Scope
      BitSetMap
      CmdLine
      Prelude
      Prim
      QName
      ModulePaths
      Tests
      Parser
      ParseSyntax
      BiUnify
      Builtins
      CoreBinary
      CoreSyn
      CoreUtils
      Errors
      Externs
      BetaEnv
      MuRoll
      Generalise
      Infer
      Mixfix
      MixfixSyn
      PrettyCore
      ShowCore
      SimplifyInstr
      TCState
      TTCalculus
      TypeCheck
      MkSSA
      SSA
      C
      PrettySSA
      Paths_irie
  hs-source-dirs:
      compiler/
      compiler/1_Main/
      compiler/2_Parse/
      compiler/3_Core/
      compiler/4_ASM/
      compiler/5_Backends/
  default-extensions:
      StrictData
      LambdaCase
      EmptyCase
      ViewPatterns
      StandaloneDeriving
      MultiWayIf
      PartialTypeSignatures
      ScopedTypeVariables
      RankNTypes
      FlexibleContexts
      FlexibleInstances
      TupleSections
      ConstraintKinds
      RecursiveDo
      OverloadedStrings
      DeriveDataTypeable
      DeriveGeneric
      OverloadedRecordDot
      UnicodeSyntax
      DeriveFunctor
      DeriveTraversable
      DeriveFoldable
      DerivingVia
      TypeApplications
      StandaloneKindSignatures
      TypeOperators
      TypeFamilies
  build-depends:
      base
    , ghc-prim
    , blaze-builder
    , bytestring
    , containers
    , directory
    , filepath
    , haskeline
    , lens
    , megaparsec >8.0
    , mtl
    , optparse-applicative
    , primitive
    , prettyprinter
    , protolude
    , semialign
    , text
    , these
    , transformers
    , unix
    , unordered-containers
    , binary
    , vector
    , vector-binary-instances
    , raw-strings-qq
    , sydtest
    , temporary
    , recursion-schemes
    , comonad
    , free
    , indexed-traversable
    , distributive
    , adjunctions
    , kan-extensions
    , profunctors
    , time
    , async
    , fresnel
    , filelock
    , repline
    , edit-distance
--  , fused-effects
  default-language: Haskell2010

--test-suite irie-test
--  type: exitcode-stdio-1.0
--  main-is: Main.hs
--  build-depends:
--    tasty
